@@ -30,6 +30,7 @@ import org.apache.cassandra.db.filter.NamesQueryFilter;
 import org.apache.cassandra.db.filter.SliceQueryFilter;
 import org.apache.cassandra.db.index.SecondaryIndexManager;
 import org.apache.cassandra.db.marshal.AbstractType;
+import org.apache.cassandra.db.marshal.CompositeType;
 import org.apache.cassandra.db.marshal.MarshalException;
 import org.apache.cassandra.dht.IPartitioner;
 import org.apache.cassandra.dht.RandomPartitioner;
@@ -395,7 +396,7 @@ public class ThriftValidation
         if (!column.isSetTimestamp())
             throw new org.apache.cassandra.exceptions.InvalidRequestException("Column timestamp is required");
 
-        ColumnDefinition columnDef = metadata.getColumnDefinition(column.name);
+        ColumnDefinition columnDef = getColumnDefinition(metadata, column.name);
         try
         {
             AbstractType<?> validator = metadata.getValueValidator(columnDef);
@@ -420,6 +421,26 @@ public class ThriftValidation
                                                                               columnDef.getIndexName(),
                                                                               metadata.cfName,
                                                                               metadata.ksName));
+    }
+
+    private static ColumnDefinition getColumnDefinition(CFMetaData metadata, ByteBuffer columnName)
+    {
+        if (metadata.comparator instanceof CompositeType)
+        {
+            CompositeType composite = (CompositeType)metadata.comparator;
+            ByteBuffer[] components = composite.split(columnName);
+            for (ColumnDefinition def : metadata.getColumn_metadata().values())
+            {
+                ByteBuffer toCompare = def.componentIndex == null ? columnName : components[def.componentIndex];
+                if (columnName.equals(toCompare))
+                    return def;
+            }
+            return null;
+        }
+        else
+        {
+            return metadata.getColumnDefinition(columnName);
+        }
     }
 
     /**
